--- a/upbittrade/src/main/res/layout/activity_main.xml
+++ b/upbittrade/src/main/res/layout/activity_main.xml
@@ -22,4 +22,10 @@
         android:onClick="coinedit"
         />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
 </LinearLayout>
